# open-source-sisr-routing

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  config.json
lib/: json_LICENSE.txt
src/: ProblemInstance.cpp  ProblemInstance.hpp  Sisrs.cpp  Sisrs.hpp  Solution.cpp  Solution.hpp  main.cpp
